golden/error/json_function.test
// Note, .len is an unserializable function, we don't call it!
"frobnicator".len

# output:
 --> stdin:1:0
  |
1 | // Note, .len is an unserializable function, we don't call it!
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Error: Functions cannot be exported as json.
